--- a/Test-Project/style.css
+++ b/Test-Project/style.css
@@ -1,3 +1,14 @@
-.4thClass{
-    
+.firstClass{
+
+}
+.secondClass{
+
+}
+.thirdClass{
+
+}
+.fourthClass{
+    width: 50;
+    background-color: yellow;
+    border-radius: 25px;
 }
